--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,8 @@ dependencies = [
     "sentence-transformers>=2.3.1",
     "tiktoken>=0.5.2",
     "python-dotenv>=1.0.0",
+    "langchain-huggingface>=0.3.1",
+    "rich>=14.1.0",
+    "langgraph>=0.6.8",
+    "langchain-openai>=0.3.34",
 ]
