MULTIMODAL PREPROCESSING AND EMBEDDING PIPELINE

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,16 +5,25 @@ description = "RAG system for space biology research papers"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "langchain-huggingface>=0.3.1",
+    "langchain-qdrant>=0.2.1",
     "pymupdf>=1.23.26",
-    "qdrant-client>=1.7.0",
     "langchain>=0.1.0",
     "langchain-community>=0.0.20",
-    "sentence-transformers>=2.3.1",
-    "tiktoken>=0.5.2",
-    "python-dotenv>=1.0.0",
-    "langchain-huggingface>=0.3.1",
-    "rich>=14.1.0",
-    "langgraph>=0.6.8",
+    "langchain-groq>=0.0.1",
     "langchain-openai>=0.3.34",
+    "langgraph>=0.6.8",
+    "sentence-transformers>=2.3.1",
+    "python-dotenv>=1.0.0",
+    "transformers>=4.35.2",
+    "torch>=2.2.0",
+    "Pillow>=10.0.0",
+    "numpy>=1.27.0",
+    "scikit-learn>=1.3.0",
+    "langchain-core>=0.1.0",
+    "qdrant-client>=1.15.1",
+    "tqdm>=4.67.1",
     "tavily-python>=0.7.12",
+    "rich>=14.1.0",
+    "tiktoken>=0.5.2",
 ]
